Added Chart.js link in index and made a script in app.js to draw a bar chart, also touch up some more of the css in css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
   </head>
   <body>
     <header>
-      <h1>Bus Mall</h1>
+      <section id="sectionLogoPicture">
+        <img src="https://via.placeholder.com/150x50"/>
+      </section>
+      <section id="sectionLogoText">
+        <h1>Bus Mall</h1>
+      </section>
+      <section id="sectionNav">
+        <nav>
+          <ul>
+            <li>Home</li>
+            <li>Products</li>
+            <li>About</li>
+            <li>Contact</li>
+          </ul>
+        </nav>
+      </section>
     </header>
     <main>
       <section id="sectionImagesVote">
@@ -15,8 +30,12 @@
         <img id="imgVoteTwo"/>
         <img id="imgVoteThree"/>
       </section>
+      <section>
+        <canvas id="myChart" width="150" height="150"></canvas>
+      </section>
     </main>
     <footer></footer>
-    <script src="./js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+    <script src="./js/app.js" type="text/javascript"></script>
   </body>
 </html>
