--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <section id="sectionLogoPicture">
-        <img src="https://via.placeholder.com/150x50"/>
+        <img id="busslogo" src="https://images.pexels.com/photos/3220861/pexels-photo-3220861.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
       </section>
       <section id="sectionLogoText">
         <h1>Bus Mall</h1>
